example cookie code; avoid double scrollbars

--- a/css/searchfuscate.css
+++ b/css/searchfuscate.css
@@ -9,7 +9,7 @@ body, p, ol, ul, td {
 }
 
 #engines {
- height: 90%;
+ height: 80%;
 }
 
 #engines iframe {
